Defect fix - Layout bug when I disable the filter panel. Defect fix - alignment of consonant-Select, remove margin

--- a/less/components/consonant/filters-info.less
+++ b/less/components/consonant/filters-info.less
@@ -1,6 +1,5 @@
 /* Available modifiers:
 - .consonant-FiltersInfo-wrapper--noLine;
-- .consonant-FiltersInfo--noFilterPanel;
 */
 
 .consonant {
@@ -121,10 +120,6 @@
             margin-right: auto;
             padding: 67px 0 28px;
 
-            &--noFilterPanel {
-                width: 83.3vw;
-            }
-
             &-wrapper {
                 order: -1;
                 padding: 5px 32px 5px 0;
@@ -167,10 +162,6 @@
         }
 
         @media @consonant-big-desktop-up {
-            &--noFilterPanel {
-                width: @consonantDesktopMinWidth;
-            }
-
             &-title {
                 max-width: @consonant-FiltersInfo-title-1440BreakpointWidth;
             }
