--- a/less/components/consonant/filters/top/panel.less
+++ b/less/components/consonant/filters/top/panel.less
@@ -23,6 +23,7 @@
 
         &-inner > *:not(&-filtersWrapper):first-child {
             margin-left: auto;
+            margin-right: 0;
         }
 
         &-searchWrapper {
@@ -153,7 +154,8 @@
         }
 
         &-selectWrapper {
-            display: block;
+            display: flex;
+            justify-content: flex-end;
             width: @consonant-Select-width * 0.85;
             margin-right: 8px;
             order: -1;
